fixed layout bugs

--- a/app/assets/stylesheets/working.scss
+++ b/app/assets/stylesheets/working.scss
@@ -164,12 +164,8 @@ footer {
     width: 52%;
     margin: 0 auto;
 
-    li {
-      width: 150px;
-
-      .caret {
-        margin-left: 70px;
-      }
+    .navbar-form {
+      text-align: center;
     }
   }
 }
